# passafety

./: .gitignore  LICENSE  README.md  build.bat  build.sh  index.html  package-lock.json  package.json  tailwind.config.js  test-passwords.csv  vite.config.ts
.github/workflows/: release.yml
docs/audit/: BUG_REPORT.md  bug_report.csv  bug_report.json
docs/superpowers/specs/: 2026-05-18-clipboard-auto-clear-design.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: vault.rs
src-tauri/src/vault/: crypto.rs  db.rs  mod.rs  password_gen.rs  state.rs
src/components/entries/: DetailPanel.tsx  EntryForm.tsx  EntryTable.tsx  PasswordGenerator.tsx
src/components/layout/: MainLayout.tsx  Sidebar.tsx
src/components/ui/: AboutModal.tsx  ChangePasswordModal.tsx  ClipboardToast.tsx  ConfirmDialog.tsx
src/components/unlock/: UnlockScreen.tsx
src/stores/: vaultStore.ts
src/types/: index.ts
