[package]
name = "passafety"
version = "3.4.1"
description = "Passafety Password Manager"
license = "MIT"
repository = "https://github.com/iniak/passafety"
authors = ["iniak <iniak@users.noreply.github.com>"]
edition = "2021"

[lib]
name = "passafety_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

# Crypto and database dependencies
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
zeroize = "1.8"
csv = "1.3"
encoding_rs = "0.8"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
